--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -3,6 +3,9 @@
   margin: 0 auto;
   padding: 0;
   text-align: center;
+
+  --max: 1400px;
+  --pad: 48px;
 }
 
 .logo {
@@ -39,4 +42,20 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.app-content {
+  position: relative;
+  z-index: 0;
+  min-height: 100vh;
+}
+
+.container {
+  width: min(var(--max), calc(100% - 2 * var(--pad)));
+  margin-inline: auto;
+  height: 100vh;
+}
+
+p {
+  text-align: left;
 }
