--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -1,4 +1,5 @@
 #root {
+  min-width: 1200px;
   max-width: none;
   margin: 0 auto;
   padding: 0;
@@ -44,16 +45,47 @@
   color: #888;
 }
 
+.app-shell {
+  /* min-height: 100vh; */
+  display: flex;
+  flex-direction: column;
+}
+
+.app-main {
+  min-height: 100vh;
+  flex: 0 0 auto; /* 关键：撑开剩余空间 */
+  display: flex; /* 可选：如果你里面还要用 flex/grid 都行 */
+  flex-direction: column;
+}
+
 .app-content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
   position: relative;
   z-index: 0;
-  min-height: 100vh;
+  /* min-height: 100vh; */
 }
 
 .container {
-  width: min(var(--max), calc(100% - 2 * var(--pad)));
-  margin-inline: auto;
-  height: 100vh;
+  /* flex: 1;
+  display: flex;
+  flex-direction: column; */
+  min-height: 100vh;
+  /* width: min(var(--max), calc(100% - 2 * var(--pad))); */
+  /* margin-inline: auto; */
+  /* height: 100vh; */
+}
+
+.signature-block {
+  display: grid;
+  place-items: center;
+  gap: 6px;
+  padding: 16px 0;
+  /* 可加边框、背景等 */
+  background: #45484b; /* 浅灰背景 */
+  border-top: 2px solid #e5e7eb; /* 上边框 */
+  box-shadow: 0 -1px 0 0 #e5e7eb inset;
 }
 
 p {
