--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -1,14 +1,19 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
+/* NOTE: @import 会增加一次额外的网络请求，通常不如 <link> 高效 */
+
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+  font-size: 14px;
   font-weight: 400;
-
-
-
+  font-family: var(--font-family-plan-C);
+  line-height: 1.5;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  --font-family-plan-A: "Palatino Linotype", Palatino, "Book Antiqua", Georgia,
+    serif;
+  --font-family-plan-B: Georgia, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  --font-family-plan-C: "Lucida Sans Unicode";
 }
 
 a {
@@ -21,38 +26,13 @@ a:hover {
 }
 
 body {
-  margin: 0;
   min-width: 320px;
   min-height: 100vh;
-  font-family: 'Inter', sans-serif;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-}
-
-h1, h2, h3 {
-  font-family: 'Poppins', sans-serif;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  /* padding: 0.6em 1.2em; */
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
 @media (prefers-color-scheme: light) {
@@ -68,8 +48,9 @@ button:focus-visible {
   }
 }
 
-html, body, #root {
+html,
+body,
+#root {
   height: 100%;
   margin: 0;
 }
-
