--- a/frontend/src/styles/pages/dashboard.css
+++ b/frontend/src/styles/pages/dashboard.css
@@ -1,18 +1,7 @@
-@media (max-width: 900px) {
-  .nav-center {
-    overflow-x: auto;
-  }
-  .nav-links {
-    flex-wrap: nowrap;
-    justify-content: flex-start;
-  }
-  .nav-links a {
-    flex: 0 0 auto;
-  }
-}
-
 .dashboard-container {
+  flex: 1;
   display: grid;
+  place-items: center;
   grid-template-rows: auto 1fr;
   position: relative;
   width: 100%;
@@ -21,7 +10,7 @@
   padding: 0;
   border: none;
 
-  text-align: centre;
+  text-align: center;
   color: #000000;
 
   word-break: break-word;
@@ -29,86 +18,22 @@
   background: transparent;
 }
 
-.dashboard-bg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  z-index: 0;
-  opacity: 0.65;
-}
-
-.navbar {
-  display: grid;
-  grid-template-columns: 1fr auto 1fr;
-  justify-content: flex-start;
-  align-items: center;
-  background-color: whitesmoke;
-  padding: 20px 10px;
-  position: sticky;
-  top: 0;
-  z-index: 1000;
-  width: 100vw;
-  box-sizing: border-box;
-  margin-left: calc(
-    50% - 50vw
-  ); /* Break out its parent container to cover the entier screen width */
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
-
-  font-size: 20px;
-  font-weight: bold;
-}
-
-.nav-left-top {
-  min-width: max-content;
-  display: flex;
-  align-items: center;
-  padding-right: 20px;
-  flex-shrink: 0;
-  margin-right: 20px;
-}
-
-.nav-center {
-  display: flex;
-  justify-content: center;
-}
-
-.nav-links {
-  display: flex;
-  justify-content: left; /* NOTE: if set to center, will cause overflow */
-  width: 100%;
-}
-
-.nav-links a {
-  min-width: max-content;
-  color: black;
-  text-decoration: none;
-  margin: 0 15px;
-  font-weight: bold;
-  padding: 5px 12px;
-}
-
-.nav-links a:hover {
-  text-decoration: underline;
-  text-decoration-color: #3b82f6;
-  text-decoration-thickness: 4px;
-  text-decoration-skip-ink: none;
-}
-
 .main-content {
-  height: 100%;
-  /* position: relative; */
-  /* padding-top: 10px; */
+  min-height: inherit;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  /* place-items: center; */
 }
 
-.user-role {
-  padding: 5px 12px;
-  border-radius: 4px;
-  text-decoration: underline;
-  text-decoration-color: #3b82f6;
-  text-decoration-thickness: 4px;
-  text-decoration-skip-ink: none;
+.main-content-wrap {
+  display: grid;
+}
+
+#main-content {
+  min-height: inherit;
+  justify-self: center;
+  /* margin-left: calc(-5% / 0.9); */
+  width: min(var(--max), calc(100% - 2 * var(--pad)));
 }
 
 .event-list {
